# gke-enterprise-demo

./: BUILD.bazel  GETTING_STARTED.md  Jenkinsfile  Makefile  README.md  WORKSPACE
app_repos/pyrios/: BUILD.bazel
app_repos/pyrios-ui/: BUILD.bazel  Dockerfile
app_repos/pyrios-ui/deploy/: deployment.yaml
pyrios/: BUILD.bazel
pyrios-ui/: BUILD.bazel
pyrios-ui/manifests/: deployment.yaml
