load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-enterprise-demo/pyrios-ui",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_tidwall_gjson//:go_default_library",
        "@com_google_cloud_go//compute/metadata:go_default_library",
        "@com_google_cloud_go//monitoring/apiv3:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_opencensus_go//trace:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
        "@org_golang_google_genproto//googleapis/api/metric:go_default_library",
        "@org_golang_google_genproto//googleapis/api/monitoredres:go_default_library",
        "@org_golang_google_genproto//googleapis/monitoring/v3:go_default_library",
    ],
)

go_binary(
    name = "pyrios-ui",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
